# VisualCentricBenchmark

./: .env.example  .gitignore  README.md  agent.py  atomic_caption.py  caption.py  config.py  design.pen  eval.py  find_samples.py  get_mm_data.py  gpt.py  inference.py  llm_client.py  pyproject.toml  rewrite.py  server.py  session.py  stability.py  structured_caption.py  visualize_venn.py
backends/: __init__.py  base.py  graphviz_backend.py  matplotlib_backend.py  tikz.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/app/: main.ts  providers.ts  router.ts  styles.css
frontend/src/components/composer/: BackendSelect.vue  MaxTurnsSelect.vue  PromptComposer.vue  SubmitButton.vue
frontend/src/components/empty/: EmptyStatePanel.vue  ExamplePromptCard.vue
frontend/src/components/sidebar/: EmptySessionsHint.vue  SessionListItem.vue  SessionSidebar.vue
frontend/src/components/thread/: DownloadButton.vue  ProcessSteps.vue  PromptMessageCard.vue  RenderPreview.vue  ResponseCard.vue  ThreadView.vue
frontend/src/components/topbar/: TopBar.vue  (+1 more)
frontend/src/composables/: useConversation.ts  useRenderImage.ts  useSessionBoot.ts
frontend/src/stores/: session.store.ts  thread.store.ts  ui.store.ts
frontend/src/types/: api.ts  domain.ts
frontend/src/utils/: idb.ts  ids.ts  markdown.ts  time.ts
frontend/src/views/: WorkspaceView.vue
prompts/: classify.md  system.md  validate.md
sandbox/: matplotlib_runner.py
tools/: __init__.py  implementations.py  registry.py
validators/: __init__.py  syntax.py  visual.py
(+6 files in other folders)
